-Little eyes quests now show the actual flask recipe along with flask you need to craft instead of just showing the materials
-Added many more vanilla potions to little eye's quest reward loot pool
-Little eye's quest flasks no longer have boss summon items in their crafting recipes because it was kind of excessive
-Added a crafting recipe for the acidic concoction incase you loose it, or if dont feel like doing little eyes quests (you will be missing out on rewards if you skip his quests though!)
-Fixed issue where little eye's sentient heart quests were available before defeating orro-boro
-Daffodil, pandora's box, and big bone's flower pot can no longer be despawned with heros mod or other cheat mods that despawn npcs
-Orro-boro's boss checklist entry now tells you how to get the concoction, similarly to how moco's entry tells you how to get the swab
-Smellies now have an increased player distance radius to shoot smelly spores, and its mouth open animation will now no longer play if it isnt shooting spores
-Reduced the amount of plant matter needed to make the flower armor helmet and chestplate
-Increased the tongueblade's use speed a little bit and nerfed its knockback slightly
-Fungal flail now spins around you a bit faster, and launches out a bit further
-Increased the spore smacker's use speed a little bit
-Moco now flees and despawns if you leave the eye valley