@@ -3,6 +3,7 @@ SpookySpiritSpawn: Spooky Spirit has awoken!
 DaffodilSpawn: Daffodil has awoken!
 OrroboroSpawn: Orro & Boro have awoken!
 BigBoneSpawn: Big Bone has awoken!
+BigBoneDefeat: The curse of the catacombs has been lifted!
 EggNoConcoction: You need a special concoction to open the egg
 EggEventBegin: The Egg Incursion has begun!
 EggEventOver: The egg's barrier has been broken!
